removed gradle and installed maven